--- a/style.css
+++ b/style.css
@@ -15,18 +15,46 @@
   display: flex;
   flex-direction: column;
   justify-content: center;
-  position: absolute;
-  right: 55%;
-  top: 20%;
+  position: relative;
+  height: 100%;
 }
 .card-dails-wrapper {
   display: flex;
+  position: relative;
 }
 .card-img {
   width: 400px;
   height: 250px;
   padding: 10px;
   /* position: absolute; */
+}
+.front {
+  background-image: url("./images/bg-card-front.png");
+  width: 100%;
+  height: 34%;
+  padding: 10px;
+  background-size: cover;
+  border-radius: 20px;
+  position: absolute;
+  position: absolute;
+  top: -89%;
+
+  left: 78px;
+  /* right: 85%; */
+}
+.color-bg {
+  /* position: relative; */
+}
+.back {
+  background-image: url("./images/bg-card-back.png");
+  width: 100%;
+  height: 36%;
+  padding: 10px;
+  background-size: cover;
+  border-radius: 20px;
+  position: absolute;
+  top: -49%;
+  left: 89px;
 }
 .card-img1 {
   width: 400px;
@@ -42,5 +70,74 @@
   width: 700px;
   background-color: white;
   border-radius: 5px;
-  box-shadow: 1px 1px 2px gray;
+  /* box-shadow: 1px 1px 2px gray; */
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+.input-control {
+  display: flex;
+  flex-direction: column;
+}
+.form-container {
+  width: 65%;
+}
+.input-control input {
+  width: 96%;
+  height: 50px;
+  border-radius: 5px;
+  padding: 20px;
+}
+.mo-year {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+
+  margin: 10px;
+}
+
+.mm-yy {
+  display: flex;
+  flex-direction: column;
+}
+.mm-input {
+  display: flex;
+}
+.month {
+  height: 45px;
+  margin-right: 5px;
+  width: 108px;
+  border-radius: 5px;
+}
+input {
+  padding: 2px;
+  outline: none;
+  border: 1px solid gray;
+}
+.year {
+  height: 45px;
+  margin-right: 5px;
+  width: 108px;
+  border-radius: 5px;
+}
+.cvv {
+  height: 45px;
+  padding: 10px;
+  width: 114px;
+  border-radius: 5px;
+}
+.cv-wraper {
+  display: flex;
+  flex-direction: column;
+}
+#btn {
+  margin: 10px 10px;
+  width: 100%;
+  height: 45px;
+  border-radius: 7px;
+  background-color: black;
+  color: #fff;
+}
+label {
+  padding: 10px 0;
 }
